<resources>
    <string name="app_name">Ellipcom</string>
    <string name="title_home">Home</string>
    <string name="Product_categories">Categories</string>
    <string name="shopping_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="txt_register">Register</string>
    <string name="password_strength_weak">weak</string>
    <string name="password_strength_medium">medium</string>
    <string name="password_strength_strong">strong</string>
    <string name="password_strength_very_strong">very strong</string>
    <string name="hint_username">username</string>
    <string name="hint_email">email</string>
    <string name="vpn_connected">disconnect form vpn and connect again</string>
    <string name="hint_password">password</string>
    <string name="register_with">register with</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_without_account">continue without account</string>
    <string name="connection_failed_check_connection_and_try_again">Connection failed check connection and try again</string>
    <string name="password_comment">your password must be atleast 8 characters. with atleast 1 number and 1 special character</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="search_ellpcom_text">search ellipcom</string>
    <string name="deliveries">Deliveries</string>
    <string name="health_care">Health care</string>
    <string name="food_and_drinks">Food and Drinks</string>
    <string name="education">Education</string>
    <string name="household">Household</string>
    <string name="household_major_categories">household major categories</string>
    <string name="phones_and_tablets">Phones and Tablets</string>
    <string name="electronics">Electronics</string>
    <string name="furniture">Furniture</string>
    <string name="top_deals">Top deals</string>
    <string name="education_major_categories">Education major categories</string>
    <string name="science">Science</string>
    <string name="arts">Art</string>
    <string name="motivational">motivational</string>
    <string name="kids">Kids</string>
    <string name="services">services</string>
    <string name="scholastic">Scholastics</string>
    <string name="construction_major_categories">Construction major categories</string>
    <string name="safety_gears">Safety gears</string>
    <string name="building_materials">Building materials</string>
    <string name="construction">Construction</string>
    <string name="plumbing">Plumbing</string>
    <string name="lighting_and_electrical">Light and Electrical</string>
    <string name="carpentry_tools">Carpentry tools</string>
    <string name="construction_equipments">Const.Equipments</string>
    <string name="technical_services">Technical services</string>
    <string name="deals_corner">deals corner</string>
    <string name="health_major_categories">Health major categories</string>
    <string name="medical_drugs">Medical drugs</string>
    <string name="personal_care">Personal care</string>
    <string name="baby_love">Baby Love</string>
    <string name="health_services">Health services</string>
    <string name="quick_rescue">Quick rescue</string>
    <string name="sexual_and_reproductive_health">sexual and reproductive health</string>
    <string name="top_deals_in_phones_and_tablets">Top deals of the day</string>
    <string name="view_all">View all</string>
    <string name="sale">sale</string>
    <string name="ugx_150000">ugx 150000</string>
    <string name="ugx_10000">10000</string>
    <string name="smart_tv_32_inch_led_digital_tv">smart tv 32 inch led digital tv</string>
    <string name="smart_tv_32_inch_led_digital_tv_smart">smart tv 32 inch led digital tv smart</string>
    <string name="currency">Ugx </string>
    <string name="search_ellipcom">Search Ellipcom</string>
    <string name="product_name">product name</string>
    <string name="product_price">product price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_short_description">Product features</string>
    <string name="product_full_description">product description</string>
    <string name="price">Price:</string>
    <string name="delivery_type">delivery type</string>
    <string name="send_to">ellipcom</string>
    <string name="status">status</string>
    <string name="remove">remove</string>
    <string name="ugx">Ugx</string>
    <string name="total_price">Total price</string>
    <string name="complete_order">complete order</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="address">Address</string>
    <string name="region">Region</string>
    <string name="town">Town</string>
    <string name="address_details">Address details</string>
    <string name="additional_mobile_number">Additional mobile number</string>
    <string name="code">code</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="save_address">Save Address</string>
    <string name="_0">0</string>
    <string name="add_new_address">Add New Address</string>
    <string name="choose_this_address">Choose this address</string>
    <string name="address_note_book">Address Note Book</string>
    <string name="edit">Edit</string>
    <string name="change">change</string>
    <string name="qty">Qty</string>
    <string name="standard_shipping">Standard shipping</string>
    <string name="pickup_description">Pickup description</string>
    <string name="customer_pick_up">Customer Pick up</string>
    <string name="sub_total">Sub total :</string>
    <string name="total">Total:</string>
    <string name="delivery_fees">delivery fees:</string>
    <string name="delivery">Delivery</string>
    <string name="address_detail">Address detail</string>
    <string name="standard_shipping_description">standard shipping description</string>
    <string name="select_shipping_method">select shipping method</string>
    <string name="pay_on_delivery">Pay on delivery</string>
    <string name="pay_on_delivery_description">pay on delivery description</string>
    <string name="mobille_money_description">Mobille money description</string>
    <string name="proceed_check_out">Proceed to check out</string>
    <string name="select_payment_method">select payment method</string>
    <string name="mobile_money">Mobile money</string>
    <string name="product_details">product details</string>
    <string name="_1">1</string>
    <string name="shipping_method">shipping method</string>
    <string name="payment_method">payment method</string>
    <string name="confirm_order">Confirm order</string>
    <string name="comfirm_order">Comfirm order</string>
    <string name="category">Category</string>
    <string name="household_categories">Household categories</string>
    <string name="television">Television</string>
    <string name="home_theatres">home theatres</string>
    <string name="speakers">speakers</string>
    <string name="portable_audio">portable audio</string>
    <string name="projectors">Projectors</string>
    <string name="dvd_players">Dvd players</string>
    <string name="accessories">accessories</string>
    <string name="smart_phones">Smart phones</string>
    <string name="tablets">Tablets</string>
    <string name="featured_phones">Featured phones</string>
    <string name="computing">Computing</string>
    <string name="desktops">Desktop Computers</string>
    <string name="printers">Printers and Scanners</string>
    <string name="monitors">Monitors</string>
    <string name="c_p_u_s">C.P.U\'s</string>
    <string name="data_storages">Data storages</string>
    <string name="networking">Networking</string>
    <string name="home_and_office">Home and Office</string>
    <string name="refrigerators">Refrigerators</string>
    <string name="cookers">Cookers</string>
    <string name="carpets">Carpets</string>
    <string name="washing_machine">Washing machine</string>
    <string name="vacuum_cleaners">Vacuum cleaners</string>
    <string name="utensils">Utensils</string>
    <string name="sofas">Sofas</string>
    <string name="beds">Beds</string>
    <string name="sideboards">Sideboards</string>
    <string name="doors">Doors</string>
    <string name="dinning_tables">Dinning tables</string>
    <string name="small_furniture">small furniture</string>
    <string name="laptops">Laptops</string>
    <string name="microwave">microwave</string>
    <string name="small_appliances">small appliances</string>
    <string name="chairs">Chairs</string>
    <string name="tables">tables</string>
    <string name="cameras">Digital cameras</string>
    <string name="education_category">Education category</string>
    <string name="advanced_science">science</string>
    <string name="physics">Physics</string>
    <string name="chemistry">Chemistry</string>
    <string name="biology">Biology</string>
    <string name="agriculture">Agriculture</string>
    <string name="tech_drawing">Technical Drawing</string>
    <string name="nutrition">Food and Nutrition</string>
    <string name="computer_studies">Computer studies</string>
    <string name="advanced_arts">Arts</string>
    <string name="history">History</string>
    <string name="art">Arts</string>
    <string name="literature">Literature</string>
    <string name="economics">Economics</string>
    <string name="entreprenuership">Entrepreneurship</string>
    <string name="divinity">Divinity</string>
    <string name="islam">Islam</string>
    <string name="languages">Languages</string>
    <string name="primary">Primary</string>
    <string name="mathematics">Mathematics</string>
    <string name="english">English</string>
    <string name="literacy_1">Literacy 1</string>
    <string name="read_and_write">Read and write</string>
    <string name="religion">Religion</string>
    <string name="s_s_t">S.S.T</string>
    <string name="drawing">Drawing</string>
    <string name="land_lines">Land lines</string>
    <string name="chargers">Chargers</string>
    <string name="data_and_connectivity">Data and Connectivity</string>
    <string name="headsets">Headsets</string>
    <string name="memory_cards">Memory cards</string>
    <string name="laptop_bags">Laptop bags</string>
    <string name="usb_flash_drives">USB Flash Drives</string>
    <string name="computer_accessories">Computer Accessories</string>
    <string name="computer_c_p_u_s">Computer C.P.U\'s</string>
    <string name="external_and_internal_hard_drives">External and Internal Hard drives</string>
    <string name="extensions">Extensions</string>
    <string name="information_technology">Information technology</string>
    <string name="geography">Geography</string>
    <string name="commerce">Commerce</string>
    <string name="christian_religious_education">Christian Religious Education</string>
    <string name="islamic_religious_education">Islamic Religious Education</string>
    <string name="kiswahili">Languages</string>
    <string name="luganda">Luganda</string>
    <string name="music">Music</string>
    <string name="primary_science">primary science</string>
    <string name="c_r_e">C.R.E</string>
    <string name="i_r_e">i.R.E</string>
    <string name="online_tutoring">Online tutoring</string>
    <string name="home_tutoring">Home tutoring</string>
    <string name="facilitations">Facilitations</string>
    <string name="primary_math">Primary math</string>
    <string name="safety_gear">Safety gear</string>
    <string name="building_tools">Building tools</string>
    <string name="construction_materials">Construction materials</string>
    <string name="plumbing_materials">Plumbing materials</string>
</resources>