<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startScreens.WelcomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop"
            android:src="@drawable/welcome_app_image" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_btn_register"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/txt_register"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            app:rippleColor="@color/blue_800"
            app:strokeColor="@color/blue_800" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_btn_login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/login"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            app:rippleColor="@color/blue_800"
            app:strokeColor="@color/blue_800" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/welcome_btn_continue"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="@string/continue_without_account"
            android:textAllCaps="false"
            app:cornerRadius="5dp"
            app:rippleColor="@color/blue_800"
            app:strokeColor="@color/blue_800" />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>