<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="8dp"
    app:cardCornerRadius="5dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="5dp"
    android:layout_marginBottom="2dp"
    android:layout_marginTop="2dp"
    app:cardMaxElevation="8dp"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:id="@+id/edit_address"
            android:focusable="true"
            app:cardBackgroundColor="#8E24AA"
            android:layout_gravity="end"
            app:cardElevation="10dp"
            app:cardCornerRadius="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/edit"
                android:textColor="@color/white" />
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_first_name"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="#121111"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_last_name"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="#121111"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_address"
                android:layout_width="wrap_content"
                android:textColor="#121111"
                android:textSize="17sp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/region"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_region"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="#121111"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/town"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_town"
                android:layout_width="wrap_content"
                android:textSize="17sp"
                android:textColor="#121111"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile_phone_number"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_phone_number"
                android:layout_width="wrap_content"
                android:textColor="#121111"
                android:textSize="17sp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/additional_mobile_number"
                android:fontFamily="sans-serif-condensed" />

            <TextView
                android:id="@+id/address_list_additional_phone_number"
                android:layout_width="wrap_content"
                android:textColor="#121111"
                android:textSize="17sp"
                android:layout_marginStart="@dimen/activity_vertical_margin"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider_color"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_vertical_margin"
            android:background="@color/blue_800">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_this_address"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textSize="17sp"
                android:gravity="center" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>