<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/product_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="1dp"
    android:clickable="true"
    android:focusable="true"
    app:cardElevation="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:contentDescription="@string/app_name" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="3dp"
                app:cardBackgroundColor="@color/sale_flash_bg_color"
                app:cardCornerRadius="10dp"
                tools:ignore="RtlHardcoded">

                <TextView
                    android:id="@+id/products_sale_badge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/sale"
                    android:textColor="@color/black"
                    android:textSize="11sp" />
            </com.google.android.material.card.MaterialCardView>

        </FrameLayout>

        <TextView
            android:id="@+id/product_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:textColor="#272626"
            android:textSize="15sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:layout_marginStart="10dp"
                style="?attr/ratingBarStyleSmall"
                android:rating="1"
                android:stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="2"
                    android:text="@string/currency"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/product_actual_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="2"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginBottom="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="2"
                    android:text="@string/currency"
                    android:textColor="#838181"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_regular_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-condensed"
                    android:maxLines="2"
                    android:textColor="#838181"
                    android:textSize="14sp" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/add_to_cart"
                android:textAllCaps="false"
                android:id="@+id/btn_pdt_add_to_cart"/>
        </LinearLayout>


    </LinearLayout>

</com.google.android.material.card.MaterialCardView>